--- a/index.html
+++ b/index.html
@@ -188,6 +188,6 @@
     Coded by <a href="#">Annysah</a>.
   </div>
 
-  <script src="/script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
